# ComparePlus

./: .gitignore  CMakeLists.txt
src/: CompareHelpers.h  CompareHelpers.mm  ComparePlus.mm  CompareSettings.h  CompareSettings.mm  CompareTools.h  CompareTools.mm  EngineBridge.mm  NavBarPanel.h  NavBarPanel.mm
src/Engine/: Engine.cpp  Engine.h  diff.h  diff_types.h  fast_myers_diff.h  myers_diff.h
